fixed menu-wrap zIndex

--- a/Styles/menu.css
+++ b/Styles/menu.css
@@ -72,7 +72,6 @@
 }
 
 .menu-wrap {
-  z-index: 300;
   font-family: "Gilroy ExtraBold", system-ui, sans-serif;
   top: 0;
   right: 0;
